sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {


	
	while(n!=1){
		
	for(i<- 0 to 8){		
		var j:Int = i+1
		var n :Int=1
		if(!plusPetit(i,j)){
			echange(i,j)
			n=n+1
			}
			n=1	
	}

}

}
